Add slasher contract that follows the fault attribution model in the constraints API
https://github.com/eth-fabric/constraints-specs/tree/fault-attribution/specs

--- a/foundry.toml
+++ b/foundry.toml
@@ -6,3 +6,6 @@ libs = ["lib"]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 
 fs_permissions = [{ access = "read-write", path = "./oracle.txt"}]
+
+[profile.solc]
+warnings = ["unused-function-parameter"]
